<resources>
    <string name="app_name">encrypted image sharing app</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">SIGN IN</string>
    <string name="image">image</string>
    <string name="create_account">Create Account</string>
    <string name="i_agree_with_the_terms_of_service_privacy_policy"><![CDATA[I agree with the Terms of service & privacy policy.]]></string>
    <string name="register">REGISTER</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="logout">""</string>
    <string name="users">Users</string>
    <string name="please_wait">Please Wait</string>

    <string name="error_message_name">Please enter name.</string>
    <string name="error_message_phone_number">Please enter phone number.</string>
    <string name="error_message_email">Please enter email.</string>
    <string name="error_message_password">Please enter password.</string>
    <string name="error_message_confirm_password">Please enter confirm password.</string>
    <string name="error_message_confirm_password_mismatch">Password and confirm password does not matched.</string>
    <string name="error_message_agree_policy">Please agree terms and condition.</string>
    <string name="register_successful">You are registered successfully.</string>
    <string name="forgot_password_text">Enter your registered email below to receive \npassword reset instruction</string>
    <string name="send">Send</string>
    <string name="email_sent_success">Email sent successfully to reset your password</string>
    <string name="message_profile_update_successs">Your profile is updated successfully.</string>
    <string name="complete_profile">COMPLETE\t PROFILE</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">SAVE</string>
    <string name="image_selection_failed">Image selection failed.</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="encrypt_and_send_file">Encrypt and Send File</string>
</resources>